# Microvisor-Demo-Weather-Device

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  deploy.sh  docker-entrypoint.sh  env.list
.github/workflows/: build.yml
App/: CMakeLists.txt  app_version.in  config.c  config.h  ht16k33-matrix.c  ht16k33-matrix.h  ht16k33.c  ht16k33.h  http.c  http.h  i2c.c  i2c.h  logging.c  logging.h  main.c  main.h  network.c  network.h  openweather.c  openweather.h  shared.c  shared.h  uart_logging.c  uart_logging.h
